--- a/css/utilStyle.css
+++ b/css/utilStyle.css
@@ -3,23 +3,25 @@ body *{
 	/* border: 1px solid #3ff7fd; */
 }
 
-header{
-	display: flex;
+.brankHeader{
+	height: 50px;
 }
 
-.twitterLogo{
-
-}
-
-.webTitle{
-	
+.twAll{
+	scroll-snap-type: y mandatory;
+	overflow: auto;
+	position: relative;
+	-webkit-overflow-scrolling: touch;
 }
 
 .twTweet{
-	margin: 0px auto;
+	scroll-snap-align: start;
+	overflow: auto;
 	display: flex;
-	width: 70%;
-	padding: 10px 10px 0px 10px;
+	position: relative;
+	flex-direction: row;
+	margin: 15px auto;
+	padding: 5px 3px 0 5px;
 	border: 1px solid #aaaaaa;
 	border-radius: 5px;
 }
@@ -27,9 +29,10 @@ header{
 .twIconWrapper{
 	display: inline-block;
 	flex-shrink: 0;
+	margin: 0px;
 	width: 50px;
 	height: auto;
-	text-align: center;
+	text-align: start;
 }
 
 
@@ -45,16 +48,30 @@ header{
 }
 
 .twContext{
+	display: inline-block;
 	width: 100%;
+	scroll-snap-align: start;
 }
 
 .twName{
 	top: 0;
 	left: 0;
+	flex-direction: row;
+}
+
+.twUserName{
+	display: inline-block;
 	font-weight: bold;
 }
 
+.twAccountName{
+	display: inline-block;
+	font-size: 10px;
+	color: #9b9b9b;
+}
+
 .twText{
+	word-break: break-word;
 }
 
 .twTime{
