--- a/css/utilStyle.css
+++ b/css/utilStyle.css
@@ -3,8 +3,27 @@ body *{
 	/* border: 1px solid #3ff7fd; */
 }
 
-.brankHeader{
-	height: 50px;
+.headerBrank{
+	height: 30px;
+}
+
+.linkWrapper{
+	position: relative;
+}
+
+.link{
+	display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.glasses{
+	height: 48px;
+	width: 48px;
+	border-radius: 50%;
 }
 
 .twAll{
@@ -21,7 +40,7 @@ body *{
 	position: relative;
 	flex-direction: row;
 	margin: 15px auto;
-	padding: 5px 3px 0 5px;
+	padding: 5px 2px 0 5px;
 	border: 1px solid #aaaaaa;
 	border-radius: 5px;
 }
@@ -86,4 +105,28 @@ body *{
 	margin: 10px auto;
 	border-radius: 2px;
 	border-top: 2px solid rgb(104, 104, 104);
+}
+
+.toAuth:hover{
+	filter: brightness(80%);
+}
+
+ul{
+	list-style: none;
+}
+
+ul li::before{
+	content: '';
+	background-color: #40c4f5;
+	border-radius: 50%;
+	width: 8px;
+	height: 8px;
+	display: inline-block;
+	margin: 0 8px 2px 0;
+}
+
+@media(max-width: 420px){
+	.headerBrank{
+		height: 50px;
+	}
 }
