--- a/css/popup.css
+++ b/css/popup.css
@@ -1,12 +1,12 @@
 .modal-wrapper {
 	z-index: 999;
 	position: fixed;
-	top: 0;
+	top: 70px;
 	right: 0;
 	bottom: 0;
 	left: 0;
 	padding: 60px 10px;
-	text-align: center
+	text-align: center;
 }
 
 .modal-wrapper:not(:target) {
@@ -26,7 +26,7 @@
 	height: 100%;
 	margin-left: -.05em;
 	vertical-align: middle;
-	content: ""
+	content: "";
 }
 
 .modal-wrapper .modal-window {
@@ -40,7 +40,7 @@
 	border-radius: 2px;
 	background: #fff;
 	box-shadow: 0 0 30px rgba(0, 0, 0, .6);
-	vertical-align: middle
+	vertical-align: middle;
 }
 
 .modal-wrapper .modal-window .modal-content {
@@ -55,7 +55,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: rgba(0, 0, 0, .8)
+	background: rgba(0, 0, 0, .8);
 }
 
 .modal-wrapper .modal-close {
@@ -70,9 +70,9 @@
 	line-height: 35px;
 	text-align: center;
 	text-decoration: none;
-	text-indent: 0
+	text-indent: 0;
 }
 
 .modal-wrapper .modal-close:hover {
-	color: #2b2e38!important
+	color: #2b2e38!important;
 }
