9/9-22:43 ツイート詳細でバグるやつの修正 ちょっと動きを増やした

--- a/css/utilStyle.css
+++ b/css/utilStyle.css
@@ -153,6 +153,12 @@ body * {
 	border-radius: 5px;
 }
 
+.twTweet:hover{
+	color: #808080;
+	transform: scale(1.02);
+	transition: .1s;
+}
+
 .twIconWrapper {
 	display: inline-block;
 	flex-shrink: 0;
